--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.5.3",
     "astro": "^4.16.7",
+    "preact": "^10.24.3",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
